enabled actuator on all service

--- a/BOOKING-SERVICE.properties
+++ b/BOOKING-SERVICE.properties
@@ -6,3 +6,4 @@ spring.jpa.show-sql: true
 spring.jpa.hibernate.ddl-auto=update
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname: localhost
+management.endpoints.web.exposure.include=*
