--- a/MECHANIC-SERVICE.properties
+++ b/MECHANIC-SERVICE.properties
@@ -4,6 +4,6 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 spring.jpa.hibernate.ddl-auto=update
-
+management.endpoints.web.exposure.include=*
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname: localhost
