--- a/USER-SERVICE.properties
+++ b/USER-SERVICE.properties
@@ -11,3 +11,4 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname: localhost
+management.endpoints.web.exposure.include=*
